# BSPM

./: .gitignore  .travis.yml  BSPM.cabal  Hacking.md  LICENSE  README.md  TODO  bench.html  stack.yaml
app/: Main.hs
bench/: Bench.hs
bsp/: bench.html  bsp.cabal
bsp/bench/: Bench.hs
bsp/src/: BSP.hs  BSPM.hs
bsp/src/BSP/Util/: CountDown.hs  InitOnce.hs
bsp/src/BSPM/: SSSP.hs
bsp/src/BSPM/Util/: CriticalSection.hs
graphomania/: bench.html  graphomania.cabal  tmp.txt
graphomania/app/: Main.hs
graphomania/bench/: Bench.hs
graphomania/src/Data/Graph/: Dijkstra.hs  Interactive.hs  Shumov.hs
graphomania/src/Data/Graph/Unboxed/Reader/: WikiVote.hs
graphomania/src/Data/GrowingArray/: Generic.hs
graphomania/src/Data/Shards/: Ordered.hs
graphomania/src/Data/Shards/Ordered/: Internal.hs
graphomania/src/Graphomania/: Builder.hs  Convert.hs  Interactive.hs  Internal.hs  Main.hs  Shumov.hs
graphomania/src/Graphomania/Algo/: Dijkstra.hs
graphomania/src/Graphomania/Builder/: FromVertices.hs
graphomania/src/Graphomania/Shumov/: Binary.hs  Internal.hs  Offheap.hs  OffheapBS.hs  OffheapI.hs  OffheapL.hs
graphomania/src/Graphomania/Utils/: Binary.hs  ByteString.hs
graphomania/test/: Spec.hs
lev-tolstoy/: bench.html  lev-tolstoy.cabal
lev-tolstoy/app/: Main.hs
lev-tolstoy/bench/: Bench.hs
lev-tolstoy/bench/Bench/: Binary.hs  Lev.hs
lev-tolstoy/src/Lev/: Buffer.hs  DoSyntax.hs  Get.hs  GetI.hs  Layout.hs  Monad.hs  Put.hs  Read.hs  Reader.hs  Write.hs
offheap/: offheap.cabal
offheap/bench/: Bench.hs
offheap/src/: Offheap.hs
offheap/src/Offheap/: Get.hs  GetBS.hs  GetBSS.hs  GetI.hs
src/: BSP.hs  BSPM.hs
src/BSP/Util/: Barrier.hs
src/BSPM/: SSSP.hs  StateStream.hs  Util.hs  WikiVote.hs
src/BSPM/Engine/: Local.hs
src/BSPM/Engine/Local/: WorkerSet.hs
src/BSPM/Util/: CountDown.hs  RunOnce.hs  RunOnceSet.hs
src/Data/Graph/: Class.hs  Interactive.hs  Unboxed.hs
src/Data/Graph/Unboxed/: Builder.hs  Internal.hs
src/Data/Graph/Unboxed/Reader/: WikiVote.hs
src/Data/GrowingArray/: Generic.hs  Unboxed.hs
src/Data/Shards/: Ordered.hs
src/Data/Shards/Ordered/: Class.hs  Internal.hs
src/Data/Vector/: Utils.hs
test/: Spec.hs
