name:                BSPM
version:             0.1.0.0
synopsis:            Bulk synchronous messaging
description:         Please see README.md
homepage:            https://github.com/schernichkin/BSPM#readme
license:             BSD3
license-file:        LICENSE
author:              Stanislav Chernichkin
maintainer:          schernichkin@gmail.com
copyright:           Copyright (C) 2016 Stanislav Chernichkin
category:            Concurrency
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-dir:            data
data-files:          wiki-Vote.txt


library
  hs-source-dirs:      src
  exposed-modules:     BSPM
                     , BSPM.Engine.Local
                     , BSPM.SSSP
                     , BSPM.Util
                     , BSPM.Util.CountDown
                     , BSPM.Util.CriticalSection
                     , BSPM.Util.RunOnce

                     , Data.Graph.Class
                     , Data.Graph.Unboxed
                     , Data.Graph.Unboxed.Builder
                     , Data.Graph.Unboxed.Internal
                     , Data.Graph.Unboxed.Reader.WikiVote
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , hashable
                     , hashtables
                     , mono-traversable
                     , primitive
                     , transformers
                     , stm
                     , vector
  default-language:    Haskell2010

executable BSPM-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , BSPM
                     , containers
                     , transformers
                     , hashable
                     , hashtables
  default-language:    Haskell2010
  Other-Modules:       Paths_BSPM

test-suite BSPM-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , BSPM
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark BSPM-bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  ghc-options:         -Wall -threaded -funbox-strict-fields -with-rtsopts=-N -main-is Bench.main
  hs-source-dirs:      bench
  build-depends:       base   >= 4.8 && < 5
                     , criterion
                     , BSPM
                     , hashtables
                     , transformers
  default-language:    Haskell2010
  Other-Modules:       Paths_BSPM

source-repository head
  type:     git
  location: https://github.com/schernichkin/BSPM
