name:                bsp
version:             0.1.0.0
synopsis:            Bulk synchronous parallel framework
description:         Please see README.md
homepage:            https://github.com/schernichkin/graphomania#readme
license:             BSD3
license-file:        LICENSE
author:              Stanislav Chernichkin
maintainer:          schernichkin@gmail.com
copyright:           Copyright (C) 2016 Stanislav Chernichkin
category:            Concurrency
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BSP
                     , BSP.Util.Barrier
                     , BSP.Util.CountDown
                     , BSP.Util.InitOnce
                     , BSPM
                     , BSPM.Engine.Local
                     , BSPM.SSSP
                     , BSPM.Util
                     , BSPM.Util.CriticalSection
                     , BSPM.Util.RunOnce

  build-depends:       base >= 4.7 && < 5
                       -- 0.8.4.0 is absolutely required due to following fix: https://github.com/kolmodin/binary/commit/7532daa8789e5199109bb1fcde367d71effb07e2
                     , binary >= 0.8.4.0
                     , bytestring
                     , hashable
                     , hashtables
                     , keys
                     , primitive
                     , stm
                     , transformers
                     , vector
  default-language:    Haskell2010
  ghc-options:       -Wall -O2

test-suite bsp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bsp
                     , HUnit
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
  ghc-options:         -Wall -threaded -rtsopts  -main-is Spec.main
  default-language:    Haskell2010

benchmark bsp-bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  ghc-options:         -Wall -threaded -funbox-strict-fields -with-rtsopts=-N -main-is Bench.main
  hs-source-dirs:      bench
  build-depends:       base   >= 4.8 && < 5
                     , bsp
                     , criterion
                     , hashtables
                     , stm
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schernichkin/BSPM
