name:                graphomania
version:             0.1.0.0
synopsis:            Graph processing library
description:         Please see README.md
homepage:            https://github.com/schernichkin/graphomania#readme
license:             BSD3
license-file:        LICENSE
author:              Stanislav Chernichkin
maintainer:          schernichkin@gmail.com
copyright:           Copyright (C) 2016 Stanislav Chernichkin
category:            Graphs
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-dir:            data
data-files:          wiki-Vote.txt
                   , shumov/graph.bin
                   , shumov/graph_le.bin

library
  hs-source-dirs:      src
  exposed-modules:     Data.Graph.Class
                     , Data.Graph.Interactive
                     , Data.Graph.Shumov
                     , Data.Graph.Unboxed
                     , Data.Graph.Unboxed.Builder
                     , Data.Graph.Unboxed.Internal
                     , Data.Graph.Unboxed.Reader.WikiVote
                     , Data.GrowingArray.Generic
                     , Data.Shards.Ordered
                     , Data.Shards.Ordered.Internal
                     , Data.Vector.Utils
                     , Graphomania.Convert
                     , Graphomania.Interactive
                     , Graphomania.Main
                     , Graphomania.Shumov
                     , Graphomania.Shumov.Internal
                     , Graphomania.Shumov.Offheap
                     , Graphomania.Shumov.OffheapI
                     , Graphomania.Utils.Binary
                     , Graphomania.Utils.ByteString
  build-depends:       base >= 4.7 && < 5
                       -- 0.8.4.0 is absolutely required due to following fix: https://github.com/kolmodin/binary/commit/7532daa8789e5199109bb1fcde367d71effb07e2
                     , binary >= 0.8.4.0
                     , cpu
                     , bsp
                     , bytestring
                     , deepseq
                     , hashable
                     , hashtables
                     , keys
                     , lens
                     , mono-traversable
                     , mwc-random
                     , offheap
                     , optparse-applicative
                     , primitive
                     , stm
                     , tagged
                     , transformers
                     , vector
                     , vector-algorithms
  default-language:    Haskell2010
  ghc-options:       -Wall -O

executable graphomania
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O -threaded -rtsopts
  build-depends:       base
                     , containers
                     , graphomania
                     , keys
                     , primitive
                     , timeit
                     , transformers
                     , hashable
                     , hashtables
                     , vector
                     , vector-algorithms
  default-language:    Haskell2010
  Other-Modules:       Paths_graphomania

test-suite graphomania-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , graphomania
                     , HUnit
                     , keys
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , vector
  ghc-options:         -Wall -threaded -rtsopts  -main-is Spec.main
  default-language:    Haskell2010

benchmark graphomania-bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  ghc-options:         -Wall -threaded -funbox-strict-fields -with-rtsopts=-N -main-is Bench.main
  hs-source-dirs:      bench
  build-depends:       base   >= 4.8 && < 5
                     , graphomania
                     , criterion
                     , hashtables
                     , lens
                     , mono-traversable
                     , stm
                     , transformers
  default-language:    Haskell2010
  Other-Modules:       Paths_graphomania

source-repository head
  type:     git
  location: https://github.com/schernichkin/BSPM
