name:                lev-tolstoy
version:             0.1.0.0
synopsis:            "Lev Tolstoy" - binary reader and writer.
description:         Please see README.md
homepage:            https://github.com/schernichkin/graphomania#readme
license:             BSD3
license-file:        LICENSE
author:              Stanislav Chernichkin
maintainer:          schernichkin@gmail.com
copyright:           Copyright (C) 2016 Stanislav Chernichkin
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lev.Buffer
                     , Lev.Get
  build-depends:       base
                     , deepseq
                     , ghc-prim
                     , profunctors
                     , primitive
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields

executable lev-tolstoy
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields -with-rtsopts=-N
  build-depends:       base
                     , lev-tolstoy
  default-language:    Haskell2010

test-suite lev-tolstoy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , lev-tolstoy
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields -with-rtsopts=-N -main-is Spec.main
  default-language:    Haskell2010

benchmark lev-tolstoy-bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  hs-source-dirs:      bench
  build-depends:       base
                     , criterion
                     , lev-tolstoy
                     , ghc-prim
                     , primitive
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields -with-rtsopts=-N -main-is Bench.main

source-repository head
  type:     git
  location: https://github.com/schernichkin/BSPM
